# DTeamTest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
DTeamTest/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
audit/: middleware.py  models.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py
main/: .env.example  admin.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
main/fixtures/: fixt_cv.json
main/migrations/: 0001_initial.py  0002_remove_cv_skills_skill.py  0003_alter_skill_level.py
main/tasks/: send_cv_email_pdf.py
main/templatetags/: utils.py
main/tests/: tests_api.py  tests_view.py
templates/audit/: recent_requests.html
templates/main/: cv_detail.html  cv_list.html  cv_pdf.html  settings.html
tools/: ai_translate.py  email_validator.py  pdf_generator.py
