[tool.poetry]
name = "dteamtest"
version = "0.1.0"
description = ""
authors = ["Nik-BZ-22 <bakhamyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
python-dotenv = "^1.1.0"
weasyprint = "^65.1"
djangorestframework = "^3.16.0"
psycopg = "^3.2.9"
celery = "^5.5.2"
kombu = "^5.5.3"
google-genai = "^1.15.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
